--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
 
-/*
-	Landed by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
-*/
 
 /* Reset */
 
@@ -3265,6 +3260,7 @@
 		top: 0;
 		width: 100%;
 		z-index: 100;
+		border-bottom: 2px solid lightgrey;
 	}
 
 		#header h1 {
@@ -3403,7 +3399,10 @@
 				#banner .content .image img {
 					border-radius: 100%;
 					display: block;
-					width: 100%;
+					/*width: 100%;*/
+					height: 100%;
+					position: relative;
+					right:50px;
 				}
 
 	body.is-touch #banner {
