--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1439,6 +1439,9 @@
 					border-radius: 100%;
 					display: block;
 					width: 100%;
+					height: 100%;
+					position: relative;
+					right:50px;
 				}
 			}
 		}
