--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1363,9 +1363,9 @@
 		}
 
 		#header {
-			background: #272833;
+			background: transparent;
 			box-shadow: none;
-			position: sticky;
+			position: absolute;
 		}
 	}
 
